# cbrigadier

./: .gitignore  CMakeLists.txt  README.md
inc/: brigadier.h  brigadier_cmd.h  brigadier_ctx.h  brigadier_func.h  brigadier_node.h
src/brigadier_cmd/: base.c
src/brigadier_ctx/: base.c  execute.c
src/brigadier_node/: config.c  match.c  print.c  tree.c
